[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.4"

embassy-time = { version = "0.1.0", path = "../embassy/embassy-time" }

# Cryptography operations we're testing.
sha2 = { version = "0.10", default-features = false }
p256 = { version = "0.13.0", default-features = false, features = ["arithmetic", "ecdh", "ecdsa", "sha2" ] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "heapless", "alloc"] }
aes-kw = { version = "0.2.1", default-features = false, features = ["alloc"] }

# The COSE library
coset = "0.3.4"

# The basis for RNG. We'll need to get from the underlying chips RNG to really
# do this properly.
rand_core = { version = "0.6", default-features = false }