[package]
authors = ["David Brown <david.brown@linaro.org>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
# cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
# panic-semihosting = "0.6.0"
panic-probe = "0.3.1"

# Some cryptography stuff.
sha2 = { version = "0.10", default-features = false }
p256 = { version = "0.13.0", default-features = false, features = ["arithmetic", "ecdh", "ecdsa", "sha2" ] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "heapless", "alloc"] }
aes-kw = { version = "0.2.1", default-features = false, features = ["alloc"] }

# Ring, for an alternate implementation
# ring = { version = "0.16", default-features = false }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# The above is deprecated.
stm32f3xx-hal = { version = "0.9", features = ["stm32f303xc", "rt", "ld"] }
heapless = "0.7.16"
embedded-alloc = "0.5.0"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
coset = "0.3.4"

# The basis for RNG. We'll need to get from the underlying chips RNG to really
# do this properly.
rand_core = { version = "0.6", default-features = false }

# mbedtls = { version = "0.8.1", default-features = false }
# mbedtls-sys-auto = { version = "2.28.0", default-features = false }

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
opt-level = "s"
lto = true # better optimizations

[profile.dev]
# codegen-units = 1
opt-level = "s"
debug = 2
# lto = true