[package]
edition = "2021"
name = "embassy-stm32f4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.2.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.1.0", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["nightly", "unstable-traits", "defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-usb = { version = "0.1.0", path = "../../embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.1.0", path = "../../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "nightly"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = "1.0"
embedded-alloc = "0.5.0"

flow = { version = "0.1.0", path = "../../flow" }

[profile.release]
debug = 2
